--- a/style.css
+++ b/style.css
@@ -1,62 +1,145 @@
 body {
-    background-color: #d0cfd3;
-    color: black;
-    font-family: Arial, Helvetica, sans-serif;
-    padding: 0 15px;
-}
-
-header {
-    font-size: 25px;
-    font-weight: bold;
-    height: 10px;
-    padding: 20px;
-    margin-bottom: 20px;
+  background-color: #f2f3f8;
+  color: black;
+  font-family: Lato, Arial, Helvetica, sans-serif;
+  line-height: 1.6;
+  padding: 0 15px;
+  margin: 0 auto;
+  max-width: 1200px;
 }
 
 section {
-    align-content: center;
-    display: inline-block;
+  display: flex;
 }
 
 .gen {
-    border: 1px solid #052f5f;
-    float: left;
-    margin: 10px;
-    padding: 0 10px;
-    height: 520px;
-    width: 700px;
+  flex: 1;
+  margin: 10px;
+  padding: 1em;
+  min-width: 400px;
+  max-width: 900px;
+  background-color: white;
+  border-radius: 4px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
-section .gen h3 {
-    background-color: #052f5f;
-    color: white;
-    padding: 5px;
+.gen h3 {
+  background-color: #052f5f;
+  color: white;
+  padding: 4px 10px;
+  margin-top: 0;
+  border-radius: 3px;
+}
+
+button {
+  border-radius: 3px;
+  padding: 6px 15px;
+  border: 0;
+  background-color: white;
+  color: black;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.2s, color 0.2s;
+}
+
+.gen button {
+  background-color: #5299e0;
+  color: white;
+  box-shadow: 0 2px 4px rgba(82, 153, 224, 0.4);
+}
+
+button.success {
+  background-color: #73ff73;
+  color: black;
+  box-shadow: 0 2px 4px hsla(120, 100%, 72.5%, 0.4);
+}
+
+#confirmShare {
+  margin-bottom: 0;
+}
+
+hr {
+  border-top: 0;
+}
+
+.row {
+  display: flex;
+  align-items: center;
+}
+
+.row p {
+  margin: 0.25em 0;
+}
+
+.switch {
+  display: inline-block;
+  width: 3em;
+  height: 1.5em;
+  flex-shrink: 0;
+  margin-right: 5px;
+}
+
+.switch input {
+  display: none;
+}
+
+.slider {
+  display: flex;
+  align-items: center;
+
+  height: 100%;
+  padding-left: 0.25em;
+
+  background-color: #ccc;
+  border-radius: 1em;
+
+  cursor: pointer;
+  transition: background-color 0.2s;
+}
+
+input:checked + .slider {
+  background-color: #5299e0;
+}
+
+.slider::before {
+  height: 1em;
+  width: 1em;
+
+  background-color: white;
+  border-radius: 50%;
+  box-shadow: 0 2px 5px -2px black;
+  content: "";
+
+  transition: margin-left 0.2s;
+}
+
+input:checked + .slider::before {
+  margin-left: 1.5em;
 }
 
 #table {
-    padding: 10px;
+  padding: 10px;
 }
 
 #table p {
-    margin-left: 20px;
+  margin: 0.5em;
 }
 
 footer {
-    font-size: xx-small;
+  font-size: xx-small;
 }
 
 footer #update {
-    font-size: small;
+  font-size: small;
 }
 
 .confirm {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 a:link {
-    color: red;
+  color: red;
 }
 
 a:visited {
-    color: green;
+  color: green;
 }
