add button hover styles

--- a/style.css
+++ b/style.css
@@ -38,19 +38,33 @@ button {
   background-color: white;
   color: black;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  transition: background-color 0.2s, color 0.2s;
+  transition: background-color 0.2s, color 0.2s, transform 0.2s;
+}
+
+button:hover {
+  background-color: hsl(0, 0%, 97%);
+  cursor: pointer;
+  transform: translateY(-2px);
 }
 
 .gen button {
-  background-color: #5299e0;
+  background-color: hsl(210, 70%, 60%);
   color: white;
-  box-shadow: 0 2px 4px rgba(82, 153, 224, 0.4);
+  box-shadow: 0 2px 4px hsla(210, 70%, 60%, 0.5);
+}
+
+.gen button:hover {
+  background-color: hsl(210, 70%, 54%);
 }
 
 button.success {
-  background-color: #73ff73;
+  background-color: hsl(120, 100%, 72.5%);
   color: black;
   box-shadow: 0 2px 4px hsla(120, 100%, 72.5%, 0.4);
+}
+
+button.success:hover {
+  background-color: hsl(120, 100%, 83%);
 }
 
 #confirmShare {
