enable wrapping of .gen

--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ body {
 
 section {
   display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .gen {
@@ -17,7 +19,7 @@ section {
   margin: 10px;
   padding: 1em;
   min-width: 400px;
-  max-width: 900px;
+  max-width: 700px;
   background-color: white;
   border-radius: 4px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
