--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   background-color: #f2f3f8;
   color: black;
@@ -17,7 +21,7 @@ section {
 .gen {
   flex: 1;
   margin: 10px;
-  padding: 1em;
+  padding: 15px;
   min-width: 400px;
   max-width: 700px;
   background-color: white;
@@ -158,4 +162,11 @@ a:link {
 
 a:visited {
   color: green;
+}
+
+@media screen and (max-width: 450px) {
+  section {
+    flex-direction: column;
+    align-items: center;
+  }
 }
